# hft-inference-engine

./: CMakeLists.txt  Makefile  README.md  engine.c  engine.h  engine_simd.c  latency.h  main.c  main.cpp  train_model.py
kernel/: engine.c  engine.h  engine_simd.c  kernel_io.c  kernel_io.h  latency.h  main_cli.c
scripts/: train_model.py
src/: book_client.cpp  book_client.h  main.cpp  market_state.cpp  market_state.h  market_test.cpp  order_book.cpp  order_book.h  trade_client.cpp  trade_client.h  trade_test.cpp  ws_test.cpp
